# Xanity_debug

./: .gitignore  build-aab.bat  qemu-options.def  qemu-version.h
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  android_crash_handler.cpp  async_teardown_stub.c  block_export_stub.c  config-devices.h  config-host.h  config-poison.h  config-target.h  dump_stub.c  fast_hash_stub.c  kvmclock_stub.c  libintl_stub.c  monitor_stub.c  nbd_server_stub.c  net_stub.c  nv2a_vsh_emulator_stub.c  patch_glib.cmake  qcrypto_random_android.c  qemu_input_stub.c  qmp_stub.c  samplerate_stub.c  vmstate_if_android.c  watchdog_stub.c  xemu_android.cpp  xemu_hud_stub.c  xemu_net_stub.c  xemu_notifications_stub.c  xemu_os_utils_android.c  xemu_settings_android.cc  xemu_snapshots_stub.c
android/app/src/main/cpp/data/: xemu_64x64.png.h
android/app/src/main/cpp/epoxy/: gl.h
android/app/src/main/cpp/iconv_stub/: iconv.h  iconv_stub.c
audio/: noaudio.c  sdlaudio.c
backends/: hostmem-ram.c
block/: file-posix.c  module_block.h
chardev/: char-null.c
gdbstub/: gdbstub.c
include/: nv2a_vsh_emulator.h  samplerate.h
monitor/: monitor.c
qom/: object.c
stubs/: linux-aio.c
system/: physmem.c  runstate.c  vl.c
trace/: trace-accel_hvf.h  trace-accel_kvm.h  trace-accel_mshv.h  trace-accel_tcg.h  trace-audio.h  trace-authz.h  trace-backends.h  trace-backends_tpm.h  trace-block.h  trace-bsd_user.h  trace-chardev.h  trace-crypto.h  trace-ebpf.h  trace-gdbstub.h  trace-hw_9pfs.h  trace-hw_acpi.h  (+85 more)
(+69 files in other folders)
